# hl-ai-trader

./: .gitignore  Dockerfile  README.md  pyproject.toml
backtester/: evaluator.py  replay.py  run_backtest.sh
config/: trading_params.json  v17_live_canary.json  v17_shadow.json
docs/: 2026-03-16-dual-layer-decision-changelog.md  SPEC.md  ai_prompting.md  dev_tasks.md  live_research_candidate_pack_runbook_2026-04-17.md  replay_backtest.md  runbook.md  streams.md  v17_dryrun_integration.md  v17_shadow_readiness_report.md
infra/: .env.example  docker-compose.yml  grafana-dashboard.json
protocol/: schemas.md
research/: autoresearch_runner.py  candidate_pack.py  deployment_state.py  promotion_gate.py  promotion_orchestrator.py  strategy_score.py
scripts/: __init__.py  hourly_trading_health_report.py  hyperliquid_live_probe.py  install_autoresearch_cron.sh  install_hourly_trading_report_cron.sh  live_acceptance_report.py  live_alert_check.py  live_smoke_check.py  run_autoresearch.py  run_local.sh  scheduled_autoresearch.py  send_ctl_command.py  show_current_version.py  start_v17_shadow_dryrun.sh  watch_market_data.py
shared/: live_acceptance.py  ops_tools.py  schemas.py  time_utils.py  v17_live_canary_config.py
tests/: __init__.py  fake_redis.py  test_ai_decision_capital.py  test_ai_decision_layer1.py  test_ai_decision_layer2.py  test_ai_decision_profit_target.py  test_ai_decision_utils.py  test_ai_rebalance_alignment.py  test_bus_utils.py  test_config_loader.py  test_dlq.py  test_execution_control.py  test_execution_ctl_commands.py  test_execution_planner.py  (+20 more)
(+161 files in other folders)
