[project]
name = "hl-ai-trader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "redis>=5.0.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "prometheus_client>=0.20.0",
  "eth-account>=0.11.0",
  "hyperliquid-python-sdk>=0.18.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.setuptools]
packages = ["services", "shared"]
