[project]
name = "hl-ai-trader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "redis>=5.0.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "prometheus_client>=0.20.0",
  "eth-account>=0.11.0",
  "hyperliquid-python-sdk>=0.18.0",
  "python-okx>=0.4.0",
  "binance-futures-connector>=4.0.0",
  "python-kucoin>=2.2.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
research = [
  "polars>=1.0.0",
  "duckdb>=1.0.0",
  "pyarrow>=15.0.0",
  "scipy>=1.12.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "plotly>=5.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]


[tool.setuptools]
packages = ["services", "shared", "research"]
